Fixed grids, some spacing issues

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -196,7 +196,7 @@ h2:after {
 
 .post-cover {
     float: right;
-    width: 30%;
+    width: 35%;
     margin-left: 2em;
     margin-bottom: 1em;
     border-radius: 5px;
@@ -204,7 +204,7 @@ h2:after {
 
 @media screen and (max-width: 600px) { 
     .post-cover {
-        width: 50%;
+        width: 60%;
         margin-left: 1em;
         margin-bottom: 0.5em;
     }
